--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en-US"><head><meta charset="utf-8"><title>Patternfly Seed</title><meta id="appName" name="application-name" content="Patternfly Seed"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/svg+xml" href="/images/favicon.png"><base href="/"><script>// Handle GitHub Pages routing
+<!doctype html><html lang="en-US"><head><meta charset="utf-8"><title>Patternfly Seed</title><meta id="appName" name="application-name" content="Patternfly Seed"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/svg+xml" href="/images/favicon.png"><base href="/fleetsearch/"><script>// Handle GitHub Pages routing
     (function(l) {
       if (l.search) {
         var q = {};
@@ -14,4 +14,4 @@
           );
         }
       }
-    }(window.location))</script><script defer="defer" src="/main.bundle.js"></script><link href="/main.css" rel="stylesheet"></head><body><noscript>Enabling JavaScript is required to run this app.</noscript><div id="root"></div></body></html>
+    }(window.location))</script><script defer="defer" src="/fleetsearch/main.bundle.js"></script><link href="/fleetsearch/main.css" rel="stylesheet"></head><body><noscript>Enabling JavaScript is required to run this app.</noscript><div id="root"></div></body></html>
