--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
     var path = window.location.pathname;
     var search = window.location.search;
     var hash = window.location.hash;
-    var pathSegmentsToKeep = 0; // Adjust if your app is in a subdirectory
+    var pathSegmentsToKeep = 1; // Keep /fleetsearch/ in the path
     
     var l = window.location;
     l.replace(
