--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Patternfly Seed</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="/images/favicon.png">
+  <link rel="icon" type="image/svg+xml" href="/fleetsearch/images/favicon.png">
   <script>
     // Single Page Apps for GitHub Pages
     // https://github.com/rafgraph/spa-github-pages
@@ -28,7 +28,7 @@
     var path = window.location.pathname;
     var search = window.location.search;
     var hash = window.location.hash;
-    var pathSegmentsToKeep = 0; // Adjust if your app is in a subdirectory
+    var pathSegmentsToKeep = 1; // Keep /fleetsearch/ in the path
     
     var l = window.location;
     l.replace(
