--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,15 @@
   <title>Patternfly Seed</title>
   <meta id="appName" name="application-name" content="Patternfly Seed">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="/images/favicon.png">
   <base href="/fleetsearch/">
+  <link rel="icon" type="image/svg+xml" href="/fleetsearch/images/favicon.png">
+  <script>
+    // Override base href for local development
+    if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' || window.location.port) {
+      document.querySelector('base').setAttribute('href', '/');
+      document.querySelector('link[rel="icon"]').setAttribute('href', '/images/favicon.png');
+    }
+  </script>
   <script>
     // Handle GitHub Pages routing
     (function(l) {
