--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
     if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' || window.location.port) {
       document.querySelector('base').setAttribute('href', '/');
       document.querySelector('link[rel="icon"]').setAttribute('href', '/images/favicon.png');
-    }</script><script>// Handle GitHub Pages routing
+    }</script><script>// Handle GitHub Pages routing - convert ?/path format back to /path
     (function(l) {
-      if (l.search) {
-        var q = {};
-        l.search.slice(1).split('&').forEach(function(v) {
-          var a = v.split('=');
-          q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
-        });
-        if (q.p !== undefined) {
-          window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + (q.p || '') +
-            (q.q ? ('?' + q.q) : '') +
-            l.hash
-          );
-        }
+      if (l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function(s) { 
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
       }
     }(window.location))</script><script defer="defer" src="/fleetsearch/main.bundle.js"></script><link href="/fleetsearch/main.css" rel="stylesheet"></head><body><noscript>Enabling JavaScript is required to run this app.</noscript><div id="root"></div></body></html>
