--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,23 @@
   <title>Patternfly Seed</title>
   <meta id="appName" name="application-name" content="Patternfly Seed">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>
+    // Handle GitHub Pages routing FIRST - convert ?/path format back to /path
+    // This must run synchronously before anything else loads
+    (function() {
+      var l = window.location;
+      if (l.search && l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function(s) { 
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        // Construct the new path: remove trailing slash from pathname and append decoded path
+        var pathname = l.pathname.endsWith('/') ? l.pathname.slice(0, -1) : l.pathname;
+        var newPath = pathname + decoded + (l.hash || '');
+        // Update the URL without page reload - this must happen before React loads
+        window.history.replaceState(null, null, newPath);
+      }
+    })();
+  </script>
   <base href="/fleetsearch/">
   <link rel="icon" type="image/svg+xml" href="/fleetsearch/images/favicon.png">
   <script>
@@ -14,19 +31,6 @@
       document.querySelector('base').setAttribute('href', '/');
       document.querySelector('link[rel="icon"]').setAttribute('href', '/images/favicon.png');
     }
-  </script>
-  <script>
-    // Handle GitHub Pages routing - convert ?/path format back to /path
-    (function(l) {
-      if (l.search[1] === '/') {
-        var decoded = l.search.slice(1).split('&').map(function(s) { 
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    }(window.location))
   </script>
 </head>
 
